veecle-os-runtime-macros/tests/ui/storable/unknown_attribute.stderr
error: unknown attribute argument
 --> tests/ui/storable/unknown_attribute.rs:2:12
  |
2 | #[storable(foo = "bar")]
  |            ^^^
